<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".account.LogInActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            layout="@layout/toolbar" />

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:id="@+id/login_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_email_layout"
                android:layout_width="@dimen/text_field_width"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:hint="@string/email_field"
                style="@style/TextInputLayoutStyle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_email_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:inputType="textEmailAddress"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_password_layout"
                android:layout_width="@dimen/text_field_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_default"
                android:layout_below="@id/login_email_layout"
                android:layout_centerHorizontal="true"
                android:hint="@string/password_field"
                app:passwordToggleEnabled="true"
                style="@style/TextInputLayoutStyle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_password_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_button"
                android:layout_width="@dimen/text_field_width"
                android:layout_height="wrap_content"
                android:text="@string/account_login"
                android:textColor="@color/white"
                android:backgroundTint="@color/button_color"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margin_default"
                android:layout_below="@id/login_password_layout"/>

            <TextView
                android:id="@+id/login_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_forgot_password"
                android:textColor="@color/colorAccent"
                android:layout_below="@id/login_button"
                android:layout_centerHorizontal="true"
                android:background="?android:attr/selectableItemBackground" />

        </RelativeLayout>

        <com.google.android.gms.common.SignInButton
            android:id="@+id/google_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/login_register_layout"
            android:layout_marginBottom="@dimen/margin_large"
            app:buttonSize="wide"
            android:layout_centerHorizontal="true"/>

        <LinearLayout
            android:id="@+id/login_register_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/margin_default">
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_register_message"/>

            <TextView
                android:id="@+id/login_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_register"
                android:textColor="@color/colorAccent"
                android:background="?android:attr/selectableItemBackground"/>
            
        </LinearLayout>

    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>